tests/fail/while_abolished.tk
fn main() -> i32 {
    auto i# = 0
    while i < 5 {
        i += 1
    }
    return 0
}
