tests/fail/while_abolished.stderr
error[E0107]: 'while' loop is abolished in Toka. Use 'loop {}' or 'loop cond {}' for conditional loops instead. Toka unifies all control flows under the mighty 'loop'!
 --> tests/fail/while_abolished.tk:3:5
   |
 3 |     while i < 5 {
   |     ^
